tests/rosetta/out/C/algebraic-data-types.error
cc: exit status 1
/tmp/algebraic-data-types.c: In function ‘node’:
/tmp/algebraic-data-types.c:35:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
   35 |   return (tmp_item_t){.cl = cl, .le = le, .aa = aa, .ri = ri};
      |          ^
/tmp/algebraic-data-types.c: In function ‘treeString’:
/tmp/algebraic-data-types.c:42:12: error: ‘map_string_int’ undeclared (first use in this function)
   42 |   int m = (map_string_int)(t);
      |            ^~~~~~~~~~~~~~
/tmp/algebraic-data-types.c:42:12: note: each undeclared identifier is reported only once for each function it appears in
/tmp/algebraic-data-types.c:43:22: error: request for member ‘data’ in something not a structure or union
   43 |   char *tmp1 = _str(m.data["aa"]);
      |                      ^
/tmp/algebraic-data-types.c:44:18: error: request for member ‘data’ in something not a structure or union
   44 |   return "T(" + m.data["cl"] + ", " + treeString(m.data["le"]) + ", " + tmp1 +
      |                  ^
/tmp/algebraic-data-types.c:44:51: error: request for member ‘data’ in something not a structure or union
   44 |   return "T(" + m.data["cl"] + ", " + treeString(m.data["le"]) + ", " + tmp1 +
      |                                                   ^
/tmp/algebraic-data-types.c:45:29: error: request for member ‘data’ in something not a structure or union
   45 |          ", " + treeString(m.data["ri"]) + ")";
      |                             ^
/tmp/algebraic-data-types.c: In function ‘balance’:
/tmp/algebraic-data-types.c:52:12: error: ‘map_string_int’ undeclared (first use in this function)
   52 |   int m = (map_string_int)(t);
      |            ^~~~~~~~~~~~~~
/tmp/algebraic-data-types.c:53:9: error: request for member ‘data’ in something not a structure or union
   53 |   if ((m.data["cl"] != "B")) {
      |         ^
/tmp/algebraic-data-types.c:56:13: error: request for member ‘data’ in something not a structure or union
   56 |   int le = m.data["le"];
      |             ^
/tmp/algebraic-data-types.c:57:13: error: request for member ‘data’ in something not a structure or union
   57 |   int ri = m.data["ri"];
      |             ^
/tmp/algebraic-data-types.c:60:15: error: request for member ‘data’ in something not a structure or union
   60 |     if ((leMap.data["cl"] == "R")) {
      |               ^
/tmp/algebraic-data-types.c:61:23: error: request for member ‘data’ in something not a structure or union
   61 |       int lele = leMap.data["le"];
      |                       ^
/tmp/algebraic-data-types.c:64:21: error: request for member ‘data’ in something not a structure or union
   64 |         if ((leleMap.data["cl"] == "R")) {
      |                     ^
/tmp/algebraic-data-types.c:66:40: error: request for member ‘data’ in something not a structure or union
   66 |                       node("B", leleMap.data["le"], leleMap.data["aa"],
      |                                        ^
/tmp/algebraic-data-types.c:66:60: error: request for member ‘data’ in something not a structure or union
   66 |                       node("B", leleMap.data["le"], leleMap.data["aa"],
      |                                                            ^
/tmp/algebraic-data-types.c:67:35: error: request for member ‘data’ in something not a structure or union
   67 |                            leleMap.data["ri"]),
      |                                   ^
/tmp/algebraic-data-types.c:68:28: error: request for member ‘data’ in something not a structure or union
   68 |                       leMap.data["aa"],
      |                            ^
/tmp/algebraic-data-types.c:69:38: error: request for member ‘data’ in something not a structure or union
   69 |                       node("B", leMap.data["ri"], m.data["aa"], ri));
      |                                      ^
/tmp/algebraic-data-types.c:69:52: error: request for member ‘data’ in something not a structure or union
   69 |                       node("B", leMap.data["ri"], m.data["aa"], ri));
      |                                                    ^
/tmp/algebraic-data-types.c:72:23: error: request for member ‘data’ in something not a structure or union
   72 |       int leri = leMap.data["ri"];
      |                       ^
/tmp/algebraic-data-types.c:75:21: error: request for member ‘data’ in something not a structure or union
   75 |         if ((leriMap.data["cl"] == "R")) {
      |                     ^
/tmp/algebraic-data-types.c:78:30: error: request for member ‘data’ in something not a structure or union
   78 |               node("B", leMap.data["le"], leMap.data["aa"], leriMap.data["le"]),
      |                              ^
/tmp/algebraic-data-types.c:78:48: error: request for member ‘data’ in something not a structure or union
   78 |               node("B", leMap.data["le"], leMap.data["aa"], leriMap.data["le"]),
      |                                                ^
/tmp/algebraic-data-types.c:78:68: error: request for member ‘data’ in something not a structure or union
   78 |               node("B", leMap.data["le"], leMap.data["aa"], leriMap.data["le"]),
      |                                                                    ^
/tmp/algebraic-data-types.c:79:22: error: request for member ‘data’ in something not a structure or union
   79 |               leriMap.data["aa"],
      |                      ^
/tmp/algebraic-data-types.c:80:32: error: request for member ‘data’ in something not a structure or union
   80 |               node("B", leriMap.data["ri"], m.data["aa"], ri));
      |                                ^
/tmp/algebraic-data-types.c:80:46: error: request for member ‘data’ in something not a structure or union
   80 |               node("B", leriMap.data["ri"], m.data["aa"], ri));
      |                                              ^
/tmp/algebraic-data-types.c:87:15: error: request for member ‘data’ in something not a structure or union
   87 |     if ((riMap.data["cl"] == "R")) {
      |               ^
/tmp/algebraic-data-types.c:88:23: error: request for member ‘data’ in something not a structure or union
   88 |       int rile = riMap.data["le"];
      |                       ^
/tmp/algebraic-data-types.c:91:21: error: request for member ‘data’ in something not a structure or union
   91 |         if ((rileMap.data["cl"] == "R")) {
      |                     ^
/tmp/algebraic-data-types.c:93:34: error: request for member ‘data’ in something not a structure or union
   93 |                       node("B", m.data["le"], m.data["aa"], rileMap.data["le"]),
      |                                  ^
/tmp/algebraic-data-types.c:93:48: error: request for member ‘data’ in something not a structure or union
   93 |                       node("B", m.data["le"], m.data["aa"], rileMap.data["le"]),
      |                                                ^
/tmp/algebraic-data-types.c:93:68: error: request for member ‘data’ in something not a structure or union
   93 |                       node("B", m.data["le"], m.data["aa"], rileMap.data["le"]),
      |                                                                    ^
/tmp/algebraic-data-types.c:94:30: error: request for member ‘data’ in something not a structure or union
   94 |                       rileMap.data["aa"],
      |                              ^
/tmp/algebraic-data-types.c:95:40: error: request for member ‘data’ in something not a structure or union
   95 |                       node("B", rileMap.data["ri"], riMap.data["aa"],
      |                                        ^
/tmp/algebraic-data-types.c:95:58: error: request for member ‘data’ in something not a structure or union
   95 |                       node("B", rileMap.data["ri"], riMap.data["aa"],
      |                                                          ^
/tmp/algebraic-data-types.c:96:33: error: request for member ‘data’ in something not a structure or union
   96 |                            riMap.data["ri"]));
      |                                 ^
/tmp/algebraic-data-types.c:99:23: error: request for member ‘data’ in something not a structure or union
   99 |       int riri = riMap.data["ri"];
      |                       ^
/tmp/algebraic-data-types.c:102:21: error: request for member ‘data’ in something not a structure or union
  102 |         if ((ririMap.data["cl"] == "R")) {
      |                     ^
/tmp/algebraic-data-types.c:104:34: error: request for member ‘data’ in something not a structure or union
  104 |                       node("B", m.data["le"], m.data["aa"], riMap.data["le"]),
      |                                  ^
/tmp/algebraic-data-types.c:104:48: error: request for member ‘data’ in something not a structure or union
  104 |                       node("B", m.data["le"], m.data["aa"], riMap.data["le"]),
      |                                                ^
/tmp/algebraic-data-types.c:104:66: error: request for member ‘data’ in something not a structure or union
  104 |                       node("B", m.data["le"], m.data["aa"], riMap.data["le"]),
      |                                                                  ^
/tmp/algebraic-data-types.c:105:28: error: request for member ‘data’ in something not a structure or union
  105 |                       riMap.data["aa"],
      |                            ^
/tmp/algebraic-data-types.c:106:40: error: request for member ‘data’ in something not a structure or union
  106 |                       node("B", ririMap.data["le"], ririMap.data["aa"],
      |                                        ^
/tmp/algebraic-data-types.c:106:60: error: request for member ‘data’ in something not a structure or union
  106 |                       node("B", ririMap.data["le"], ririMap.data["aa"],
      |                                                            ^
/tmp/algebraic-data-types.c:107:35: error: request for member ‘data’ in something not a structure or union
  107 |                            ririMap.data["ri"]));
      |                                   ^
/tmp/algebraic-data-types.c: In function ‘ins’:
/tmp/algebraic-data-types.c:119:14: error: request for member ‘data’ in something not a structure or union
  119 |   if ((x < tr.data["aa"])) {
      |              ^
/tmp/algebraic-data-types.c:120:27: error: request for member ‘data’ in something not a structure or union
  120 |     return balance(node(tr.data["cl"], ins(tr.data["le"], x), tr.data["aa"],
      |                           ^
/tmp/algebraic-data-types.c:120:46: error: request for member ‘data’ in something not a structure or union
  120 |     return balance(node(tr.data["cl"], ins(tr.data["le"], x), tr.data["aa"],
      |                                              ^
/tmp/algebraic-data-types.c:120:65: error: request for member ‘data’ in something not a structure or union
  120 |     return balance(node(tr.data["cl"], ins(tr.data["le"], x), tr.data["aa"],
      |                                                                 ^
/tmp/algebraic-data-types.c:121:27: error: request for member ‘data’ in something not a structure or union
  121 |                         tr.data["ri"]));
      |                           ^
/tmp/algebraic-data-types.c:123:14: error: request for member ‘data’ in something not a structure or union
  123 |   if ((x > tr.data["aa"])) {
      |              ^
/tmp/algebraic-data-types.c:124:27: error: request for member ‘data’ in something not a structure or union
  124 |     return balance(node(tr.data["cl"], tr.data["le"], tr.data["aa"],
      |                           ^
/tmp/algebraic-data-types.c:124:42: error: request for member ‘data’ in something not a structure or union
  124 |     return balance(node(tr.data["cl"], tr.data["le"], tr.data["aa"],
      |                                          ^
/tmp/algebraic-data-types.c:124:57: error: request for member ‘data’ in something not a structure or union
  124 |     return balance(node(tr.data["cl"], tr.data["le"], tr.data["aa"],
      |                                                         ^
/tmp/algebraic-data-types.c:125:31: error: request for member ‘data’ in something not a structure or union
  125 |                         ins(tr.data["ri"], x)));
      |                               ^
/tmp/algebraic-data-types.c: In function ‘insert’:
/tmp/algebraic-data-types.c:135:12: error: ‘map_string_int’ undeclared (first use in this function)
  135 |   int m = (map_string_int)(t);
      |            ^~~~~~~~~~~~~~
/tmp/algebraic-data-types.c:136:21: error: request for member ‘data’ in something not a structure or union
  136 |   return node("B", m.data["le"], m.data["aa"], m.data["ri"]);
      |                     ^
/tmp/algebraic-data-types.c:136:35: error: request for member ‘data’ in something not a structure or union
  136 |   return node("B", m.data["le"], m.data["aa"], m.data["ri"]);
      |                                   ^
/tmp/algebraic-data-types.c:136:49: error: request for member ‘data’ in something not a structure or union
  136 |   return node("B", m.data["le"], m.data["aa"], m.data["ri"]);
      |                                                 ^
